--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
-flask==2.2.2
-pillow==9.3.0
-numpy==1.23.5
+Flask==2.2.2
+Pillow==9.3.0
+numpy==1.23.5 --index-url https://pypi.org/simple --prefer-binary
 flask-cors
 setuptools
 wheel
